  * exporting image-file types shows statistics on exported elements
  * list layout improved, golden ratio is applied
  * timing and sequence diagram layouting improved;
    special handling for comments/reqs in timing and sequence diagrams
  * version compatibility also in debug mode: 
    newer database-files can be opened with older programs; asserts removed

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 09 Mar 2021 21:30:00 +0100

crystal-facet-uml (1.27.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * fixed most metainfo.xml warnings 
  * build target for gcov measurement added
  * auto-delete relationships between classifiers that have no common diagram
  * when opening the second database, view switches back to navigation mode
  * when opening the second database, search entry field is cleared
  * when opening the second database, set of marked elements is cleared
  * search result view is updated when changing the database (e.g. by undo)
  * search result view stays when database update is triggered by a 2nd window
  * when clicking on a search result, the element is focused

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 09 Feb 2021 21:30:00 +0100

crystal-facet-uml (1.27.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * compiler switch Werror removed; warnings should not cause build-breaks

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 03 Jan 2021 15:00:00 +0100

crystal-facet-uml (1.27.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * compiler warning fixed: conversions from unsigned int to size_t explicit

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 03 Jan 2021 09:00:00 +0100

crystal-facet-uml (1.27.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Tx/Rx for component ports and activity pins introduced
  * control flow pseudostate for state entry and state exit added
  * risk of nullpointer errors reduced when opening new db with old program
  * test case added to check for upwards compatibility of types at xmi export