@@ -2,6 +2,7 @@ ideas for future versions:
   @gui
   [ ] performance optimization: redraw only when shown(=visible) items have changed;
       do not redraw 3 times when changing 3 attributes simultaneously. (especially at undo/redo)
+      do not redraw twice, once for deactivating a tool and again for activating another
   [ ] a "saveAs" or export-as-cfu1 command should allow to copy the current db
   [ ] next to the about button, a help button is needed that can provide context-sensitive information.
   [ ] show a progress bar while exporting diagrams (especially for png mode)
@@ -36,8 +37,6 @@ ideas for future versions:
   [ ] diagrams need some kind of classification/stereotype like idea-for-future, rejected-alternative, ...
       --> add a "stereotype" field to "diagrams"
   [ ] some way to compare two database files / and/or to merge
-  [ ] No lifelines for comments
-  [ ] No lifelines for interaction uses
   [ ] links unclear: interactionuse(diag-reference)-to-fragment(diag); part-to-component, object-to-class
   [ ] links unclear: provided/required-interface(feature)-to-interface(classifier)
   @ctrl
